<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TextViewSongsTitle"
        style="@style/TitleTextView"
        android:text="@string/songs" />

    <TextView
        android:id="@+id/TextViewSongsInformation"
        style="@style/InformationTextView"
        android:text="@string/information_songs"
        android:layout_below="@id/TextViewSongsTitle" />

    <TextView
        style="@style/TechnicalInformationTextView"
        android:layout_below="@id/TextViewSongsInformation"
        android:text="@string/technical_information_songs" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnBackToMain"
            style="@style/OtherActivityButtons"
            android:text="@string/back_to_main" />

        <Button
            android:id="@+id/btnNextToNowPlaying"
            style="@style/OtherActivityButtons"
            android:text="@string/next_to_now_playing" />
    </LinearLayout>

</RelativeLayout>
