<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TextViewArtistsTitle"
        style="@style/TitleTextView"
        android:text="@string/artists" />

    <TextView
        android:id="@+id/TextViewArtistsInformation"
        style="@style/InformationTextView"
        android:text="@string/information_artists"
        android:layout_below="@id/TextViewArtistsTitle"
        android:layout_alignParentLeft="true" />

    <TextView
        style="@style/TechnicalInformationTextView"
        android:layout_below="@id/TextViewArtistsInformation"
        android:text="@string/technical_information_artists" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnBackToMain"
            style="@style/OtherActivityButtons"
            android:text="@string/back_to_main" />

        <Button
            android:id="@id/btnNextToSongs"
            style="@style/OtherActivityButtons"
            android:text="@string/next_to_songs" />
    </LinearLayout>
</RelativeLayout>
