<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TextViewNowPlayingTitle"
        style="@style/TitleTextView"
        android:text="@string/now_playing" />

    <TextView
        android:id="@+id/TextViewNowPlayingInformation"
        style="@style/InformationTextView"
        android:text="@string/information_now_playing"
        android:layout_below="@id/TextViewNowPlayingTitle"/>

    <TextView
        style="@style/TechnicalInformationTextView"
        android:layout_below="@id/TextViewNowPlayingInformation"
        android:text="@string/technical_information_now_playing" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnBackToMain"
            style="@style/OtherActivityButtons"
            android:text="@string/back_to_main" />

        <Button
            android:id="@+id/btnBackToSongs"
            style="@style/OtherActivityButtons"
            android:text="@string/back_to_songs" />
    </LinearLayout>

</RelativeLayout>
